--- a/java-fx-client/src/main/resources/com/teach/javafxclient/course-panel.fxml
+++ b/java-fx-client/src/main/resources/com/teach/javafxclient/course-panel.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -59,10 +60,13 @@
             <items>
                 <TableView fx:id="dataTableView" prefHeight="200.0" prefWidth="200.0">
                     <columns>
-                        <TableColumn fx:id="numColumn" prefWidth="85.0" text="课序号" />
-                        <TableColumn fx:id="nameColumn" prefWidth="150.66668701171875" text="课程名称" />
-                        <TableColumn fx:id="creditColumn" prefWidth="75.0" text="学分" />
-                        <TableColumn fx:id="preCourseColumn" prefWidth="145.0" text="先修课程" />
+                        <TableColumn fx:id="numColumn" prefWidth="60.666625936826065" text="课序号" />
+                        <TableColumn fx:id="nameColumn" prefWidth="85.33334350585938" text="课程名称" />
+                        <TableColumn fx:id="creditColumn" prefWidth="71.33329772949219" text="学分" />
+                        <TableColumn fx:id="preCourseColumn" prefWidth="64.0" text="先修课程" />
+                  <TableColumn fx:id="teacherColumn" prefWidth="84.6666259765625" text="授课教师" />
+                  <TableColumn fx:id="addressColumn" prefWidth="65.33331298828125" text="授课地点" />
+                  <TableColumn fx:id="refMatColumn" prefWidth="79.99996948242188" text="参考资料" />
                     </columns>
                 </TableView>
                 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="300.0" spacing="20.0">
@@ -79,6 +83,9 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         </rowConstraints>
                         <children>
                             <Label text="课序号" GridPane.rowIndex="0" />
@@ -89,6 +96,16 @@
                             <TextField fx:id="creditField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                             <Label text="先修课序号" GridPane.rowIndex="3" />
                             <TextField fx:id="preCourseNumField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                     <Label text="授课教师" GridPane.rowIndex="4" />
+                     <Label text="授课地点" GridPane.rowIndex="5" />
+                     <Label text="参考资料" GridPane.rowIndex="6" />
+                     <ComboBox fx:id="teacherComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <GridPane.margin>
+                           <Insets left="20.0" />
+                        </GridPane.margin>
+                     </ComboBox>
+                     <TextField fx:id="addressField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                     <TextField fx:id="refMatField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                         </children>
                     </GridPane>
                     <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="36.0">
